fixed dark mode

--- a/css/main.css
+++ b/css/main.css
@@ -4,20 +4,33 @@
 #moon {
   transition: all ease 0.3s;
   position: absolute !important;
-  margin-top: 0px;
-  opacity: 1;
+  
+  margin-top: -50px;
+  opacity: 0;
+  padding: 1rem;
+  left: 7%;
+  border-radius: 1.8rem;
 }
 .deactive {
   transition: all ease 0.3s;
   opacity: 0 !important;
-  margin-top: 30px !important;
-  transform: rotate(90deg) !important;
+  margin-top: 0!important;
+
+}
+.active{
+  transition: all ease 0.3s;
+  opacity: 1 !important;
+  margin-top: 0 !important;
 }
 #sun {
   transition: all ease 0.3s;
   position: absolute !important;
-  margin-top: 0px;
-  opacity: 1;
+  margin-top: 50px;
+  opacity: 0;
+  padding: 1rem;
+  left: 7%;
+  border-radius: 1.8rem;
+  
 }
 .navbarNav {
   margin-top: 0;
@@ -43,7 +56,7 @@ body {
   -moz-box-shadow: 0px 10px 19px -11px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 10px 19px -11px rgba(0, 0, 0, 0.75);
 }
-.navitems{
+.navitems {
   opacity: 0;
 }
 .about-card {
@@ -79,10 +92,11 @@ body {
   box-shadow: 0px 0px 25px -9px rgba(0, 0, 0, 0.75);
   padding: 5px;
   backdrop-filter: blur(25px);
+  transform: translateY(-10px);
 }
 #toast.show {
   opacity: 1;
-  transform: translateY(50px);
+  transform: translateY(-5px);
 }
 .footer {
   transition: all ease 0.3s;
